syntax = "proto3";
package proto;
option go_package = "/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Message {
  string key = 1;
  repeated int64 value = 2;
}

// Register

message RegisterRequest {
  string slug = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {}

// Login

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
}

// Logout

message LogoutRequest { string refresh_token = 1; }

// Refresh

message RefreshRequest { string refresh_token = 1; }

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
}

// Validate

message ValidateRequest { string access_token = 1; }

message ValidateResponse {
  string id = 1;
  bool valid = 2;
}

service AuthorizationService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty);
  rpc RefreshToken(RefreshRequest) returns (RefreshResponse);
  rpc ValidateToken(ValidateRequest) returns (ValidateResponse);
}

message User {
  string id = 1;
  string slug = 2;
  string email = 3;
  bool is_verified = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}
